@@ -2,7 +2,7 @@ Source: stream-utils
 Section: perl
 Priority: optional
 Build-Depends: debhelper (>= 5.0.0),
- cdbs, libapp-cmd-perl, libparent-perl, libstream-more-perl, libstream-perl, libtest-class-perl, libtest-pod-perl, libtest-simple-perl, perl, yandex-dh-builddeps
+ cdbs, libapp-cmd-perl, libparent-perl, libstream-more-perl, libstream-perl, libtest-class-perl, libtest-pod-perl, libtest-simple-perl, perl, yandex-dh-builddeps, yandex-ppb-cdbs
 # [dh_builddeps] line above is autogenerated; don't touch it
 Build-Depends-Indep: perl (>= 5.8.8)
 Maintainer: Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>
